kubernetes/narrative-core/staging/kyc-queue-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kyc-queue
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth.default.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: staging-kyc-queue.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: narrative-core
          servicePort: 8083
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - staging-kyc-queue.narrative.cloud
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth-kyc-queue
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: staging-kyc-queue.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: oauth
          servicePort: 4180
        path: /oauth2
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - staging-kyc-queue.narrative.cloud
